argocd-tls/ingrss.yaml
apiVersion: networking.k8s.io/v1
kind: Middleware
metadata:
  name: redirect-to-argocd
  namespace: default
spec:
  redirectScheme:
    scheme: https
    replacement: https://argocd.app.topadata.ch
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tls-ingress
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd #Automatischer Redirect auf HTTPS
spec:
  rules:
    - host: argocd.app.topadata.ch #Domain Name *.app.topadata.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - secretName: argocd-tls
      hosts:
        - argocd.app.topadata.ch # Domain Name *.app.topadata.ch
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tls-ingress-redirect
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd,redirect-to-argocd #Automatischer Redirect auf HTTPS
spec:
  rules:
    - host: argocd.topadata.ch #Domain Name *.app.topadata.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - secretName: argocd-tls
      hosts:
        - argocd.topadata.ch # Domain Name *.app.topadata.ch
